playlist tracks display download progress

--- a/Dromio/Playlist/PlaylistCellContentView.xib
+++ b/Dromio/Playlist/PlaylistCellContentView.xib
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23719.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23720"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,6 +13,7 @@
                 <outlet property="artist" destination="y86-M1-jBL" id="1OJ-U6-aTa"/>
                 <outlet property="composer" destination="zKj-gq-H4u" id="f3o-MK-BSU"/>
                 <outlet property="duration" destination="bFs-wc-LmU" id="c2Q-c9-JvZ"/>
+                <outlet property="thermometer" destination="Zwd-4k-wAS" id="IwI-kU-HOp"/>
                 <outlet property="title" destination="STu-iZ-oTp" id="AyR-N0-lUn"/>
             </connections>
         </placeholder>
@@ -21,6 +22,10 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="250"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view alpha="0.29999999999999999" tag="999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zwd-4k-wAS" customClass="ThermometerView" customModule="Dromio" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="250"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STu-iZ-oTp">
                     <rect key="frame" x="16" y="8.0000000000000018" width="361" height="19.666666666666671"/>
                     <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="16"/>
@@ -57,17 +62,21 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="y86-M1-jBL" secondAttribute="trailing" constant="16" id="2ZC-9H-Nza"/>
+                <constraint firstItem="Zwd-4k-wAS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7H9-rH-wLO"/>
                 <constraint firstItem="bFs-wc-LmU" firstAttribute="centerY" secondItem="zKj-gq-H4u" secondAttribute="centerY" id="AyU-1D-liK"/>
                 <constraint firstItem="gCT-iE-XbD" firstAttribute="centerY" secondItem="zKj-gq-H4u" secondAttribute="centerY" id="B5c-DA-mwz"/>
                 <constraint firstItem="STu-iZ-oTp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="Hoj-2u-z1Y"/>
                 <constraint firstItem="bFs-wc-LmU" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Lvh-Jc-PeC"/>
                 <constraint firstItem="zKj-gq-H4u" firstAttribute="top" secondItem="y86-M1-jBL" secondAttribute="bottom" priority="999" constant="12" id="ST1-n9-kfk"/>
                 <constraint firstItem="y86-M1-jBL" firstAttribute="top" secondItem="STu-iZ-oTp" secondAttribute="bottom" constant="12" id="X4X-5d-Nvb"/>
+                <constraint firstAttribute="bottom" secondItem="Zwd-4k-wAS" secondAttribute="bottom" id="ZFC-Lp-0cI"/>
                 <constraint firstAttribute="bottom" secondItem="zKj-gq-H4u" secondAttribute="bottom" constant="8" id="djq-pb-Ziy"/>
                 <constraint firstItem="STu-iZ-oTp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="f1A-DA-3vU"/>
                 <constraint firstAttribute="trailing" secondItem="gCT-iE-XbD" secondAttribute="trailing" constant="8" id="fGE-Bb-Spq"/>
                 <constraint firstItem="y86-M1-jBL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="gmA-Fg-ERw"/>
+                <constraint firstAttribute="trailing" secondItem="Zwd-4k-wAS" secondAttribute="trailing" id="i7P-g2-C7k"/>
                 <constraint firstItem="zKj-gq-H4u" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="iL8-eM-ly0"/>
+                <constraint firstItem="Zwd-4k-wAS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="nXY-nM-a2k"/>
                 <constraint firstAttribute="trailing" secondItem="STu-iZ-oTp" secondAttribute="trailing" constant="16" id="q7Q-K6-kfL"/>
                 <constraint firstItem="bFs-wc-LmU" firstAttribute="leading" secondItem="zKj-gq-H4u" secondAttribute="trailing" constant="10" id="tn6-LJ-QjC"/>
                 <constraint firstItem="gCT-iE-XbD" firstAttribute="leading" secondItem="bFs-wc-LmU" secondAttribute="trailing" constant="10" id="u56-5v-BX3"/>
