--- a/Dromio/Albums/AlbumsCellContentView.xib
+++ b/Dromio/Albums/AlbumsCellContentView.xib
@@ -20,23 +20,22 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YW7-7k-Jv6">
-                    <rect key="frame" x="16" y="8.0000000000000018" width="324" height="20.666666666666671"/>
+                    <rect key="frame" x="16" y="8.0000000000000018" width="326.33333333333331" height="20.666666666666671"/>
                     <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                     <lineBreakStrategy key="lineBreakStrategy"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jF7-tx-NHW">
-                    <rect key="frame" x="16" y="40.666666666666664" width="324" height="84.333333333333343"/>
+                    <rect key="frame" x="16" y="40.666666666666664" width="326.33333333333331" height="84.333333333333343"/>
                     <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                     <lineBreakStrategy key="lineBreakStrategy"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Z5-gm-sGw">
-                    <rect key="frame" x="348" y="46.666666666666657" width="45" height="40"/>
+                    <rect key="frame" x="350.33333333333331" y="46.666666666666657" width="34.666666666666686" height="40"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="45" id="X6A-QM-fcv"/>
                         <constraint firstAttribute="height" constant="40" id="bQh-GL-WYK"/>
                     </constraints>
                     <string key="text">101
@@ -49,12 +48,12 @@ tracks</string>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="6Z5-gm-sGw" firstAttribute="leading" secondItem="YW7-7k-Jv6" secondAttribute="trailing" constant="8" id="3qW-MJ-bRo"/>
-                <constraint firstItem="jF7-tx-NHW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="43F-iQ-RNa"/>
+                <constraint firstItem="jF7-tx-NHW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" priority="999" constant="16" id="43F-iQ-RNa"/>
                 <constraint firstItem="6Z5-gm-sGw" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="8Cs-hb-XW8"/>
-                <constraint firstAttribute="trailing" secondItem="6Z5-gm-sGw" secondAttribute="trailing" id="M68-Ic-WDE"/>
+                <constraint firstAttribute="trailing" secondItem="6Z5-gm-sGw" secondAttribute="trailing" constant="8" id="M68-Ic-WDE"/>
                 <constraint firstItem="YW7-7k-Jv6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="Ocz-Ht-SLd"/>
                 <constraint firstItem="jF7-tx-NHW" firstAttribute="top" secondItem="YW7-7k-Jv6" secondAttribute="bottom" constant="12" id="QsI-mT-YR8"/>
-                <constraint firstItem="YW7-7k-Jv6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="Swi-yn-TtX"/>
+                <constraint firstItem="YW7-7k-Jv6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" priority="999" constant="16" id="Swi-yn-TtX"/>
                 <constraint firstAttribute="bottom" secondItem="jF7-tx-NHW" secondAttribute="bottom" priority="999" constant="8" id="cSP-Yd-uCv"/>
                 <constraint firstItem="6Z5-gm-sGw" firstAttribute="leading" secondItem="jF7-tx-NHW" secondAttribute="trailing" constant="8" id="z3A-2d-ey5"/>
             </constraints>
